--- a/journalApp/src/main/resources/application.properties
+++ b/journalApp/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+
+
+spring.data.mongodb.uri=mongodb+srv://stoicSyntax:nishant@cluster0.cfma7xo.mongodb.net/journaldb?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=journaldb
 spring.data.mongodb.auto-index-creation=true
